cambio de enlace a error 404

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <small class="d-block text-primary mb-3"><span class="badge bg-primary me-2">Lo Mas Visto</span> Nueva Pelicula </small>
             <h1 class="display-6  fw-normal mb-5">Estreno Dragon Ball Super Hero <span class="text-primary"></span></h1>
             <p class=" mb-5">Presentamos los avances de la pelicula a estrenarse el año proximo. En ella veremos en accion a toda la familia de Goku, incluyendo a Pan, su pequeña nieta.</p>
-            <a href="/pages/pelicula/pelicula.html" class="btn btn-primary mb-5">ver mas</a>
+            <a href="/pages/error404.html" class="btn btn-primary mb-5">ver mas</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -37,7 +37,7 @@
             <h1 class="display-6  fw-normal mb-5">Entrevista a las voces de Dragon Ball <span class="text-primary"></span></h1>
             <p class=" mb-5">Mario Castañeda, Rene Garcia y Ricardo Brust se animan a un desopilante doblaje
               incorporando el Tucumano Basico.</p>
-            <a href="/pages/entrevista/entrevista.html" class="btn btn-primary mb-5">ver mas</a>
+            <a href="/pages/error404.html" class="btn btn-primary mb-5">ver mas</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -50,7 +50,7 @@
             <small class="d-block text-primary mb-3"><span class="badge bg-primary me-2">Lo Mas Visto</span> Batallas </small>
             <h1 class="display-6  fw-normal mb-5">Las mejores batallas de la saga <span class="text-primary"></span></h1>
             <p class=" mb-5">Son Goku Supersaiyano vs. Freeza al 100% de Poder</p>
-            <a href="/pages/batalla/batalla.html" class="btn btn-primary mb-5">ver mas</a>
+            <a href="/pages/error404.html" class="btn btn-primary mb-5">ver mas</a>
           </div>
         </div>
         <div class="col-lg-6">
